--- a/task_base/templates/task_base/goal_form.html
+++ b/task_base/templates/task_base/goal_form.html
@@ -1,6 +1,7 @@
 <h3>New Weekly Goal</h3>
-
+<a href="{% url 'goal_list' %}">Go back</a>
 <form method="POST" action="">
+    {% csrf_token %}
     {{form.as_p}}
     <input type="submit" value="Submit"/>
 </form>
