login logout view

--- a/task_base/templates/task_base/goal_list.html
+++ b/task_base/templates/task_base/goal_list.html
@@ -2,7 +2,7 @@
     <p>logged in as {{request.user}}</p>
     <a href="">logout</a>
 {% else %}
-    <a href="">login</a>
+    <a href="{% url 'login'%}">login</a>
 {% endif %}
 
 <hr/>
