--- a/task_base/templates/task_base/register.html
+++ b/task_base/templates/task_base/register.html
@@ -6,4 +6,4 @@
     <input type="submit" value="Sign In"/>
 </form>
 
-<p>Don't have an Account?  <a href="{% url 'register' %}">Register</a> </p>
+<p>Already have an Account?  <a href="{% url 'login' %}">Login</a> </p>
